# photogrammetry-nbv

./: .gitignore  README.md
src/photogrammetry_init/: README.md  package.xml  (+2 more)
src/photogrammetry_nbv/: README.md  package.xml  setup.cfg  setup.py
src/photogrammetry_nbv/colmap_scripts/: bootstrap_project.py  common.py  export_sparse_metrics.py  incremental_update.py  offline_dense_reconstruct.py  seed_sparse_reconstruct.py
src/photogrammetry_nbv/config/: colmap.yaml  metashape.yaml  phase2_mission.yaml  scoring.yaml  unified_mission.yaml
src/photogrammetry_nbv/launch/: phase2_offline_eval.launch.py  phase2_online_mission.launch.py  unified_mission.launch.py  visualization.launch.py
src/photogrammetry_nbv/metashape_scripts/: bootstrap_project.py  common.py  export_sparse_metrics.py  incremental_update.py  offline_dense_reconstruct.py
src/photogrammetry_nbv/photogrammetry_nbv/: candidate_filter.py  candidate_generator.py  colmap_rviz_publisher.py  colmap_worker_client.py  contracts.py  metashape_worker_client.py  metrics_extractor.py  mission_logger.py  offline_phase2_eval.py  phase2_controller_node.py  run_context.py  scoring_interface.py  seed_loader.py  unified_controller_node.py
src/photogrammetry_nbv/photogrammetry_nbv/adaptive/: load_tree_policy.py  train_gt_phase_switch.py
src/photogrammetry_nbv/photogrammetry_nbv/gt_supervision/: coverage_state.py  mesh_oracle.py
src/photogrammetry_nbv/rviz/: nbv_visualization.rviz
src/photogrammetry_nbv/scripts/: align_cloud.py  compare_scorers.py  eval_and_plot.py  evaluate_run.py  visualize_candidates.py
(+10 files in other folders)
